# rl-reward-lab

./: .gitignore  README.md  custom_envs.py  evaluate.py  llm_reward.py  pyproject.toml  train.py  train_custom.py  train_generated.py
generated_rewards/: hop_on_one_leg.py  jump_straight_up_repeatedly_without_moving_sideway.py
web/: _runner.py  index.html  server.py
