[project]
name = "rl-reward-lab"
version = "0.1.0"
description = "Train a simulated cheetah from a plain-English goal. Local Gemma writes the reward function, PPO trains it, and you watch the policy learn live in the browser."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "gymnasium[mujoco]<1.3",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "rich>=15.0.0",
    "stable-baselines3>=2.8.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.46.0",
]
